# backend_camphub

./: .env.example  .env.test  .gitignore  Dockerfile.postgres  Jenkinsfile  README.md  docker-compose.yml  dockerfile  init_db.py  locustfile.py  pyproject.toml
app/: main.py
app/core/: base_service.py  cache.py  config.py  db.py  deps.py  error_handlers.py  exceptions.py  permissions.py  security.py
app/db/: database.py  init_data.py
app/models/: __init__.py  announcement_model.py  bookmark_model.py  course_model.py  course_schedule_model.py  course_teacher_link.py  enrollment_model.py  event_enrollment_model.py  event_model.py  faculty_model.py  location_model.py  role_model.py  room_model.py  user_model.py
app/routers/: __init__.py
app/routers/endpoints/: announcement_route.py  auth_route.py  bookmark_route.py  course_schedule_route.py  courses_route.py  enrollment_route.py  (+6 more)
app/schemas/: __init__.py  announcement_schema.py  course_schedule_schema.py  course_schema.py  enrollment_schema.py  event_enrollment_schema.py  event_schema.py  faculty_schema.py  location.py  role_schema.py  room.py  user_schema.py
app/services/: __init__.py  announcement_service.py  auth_service.py  bookmark_service.py  course_schedule_service.py  courses_service.py  enrollment_service.py  event_enrollment_service.py  event_service.py  faculty_service.py  image_service.py  location_service.py  room_service.py  user_service.py
app/utils/: __init__.py  datetime_utils.py
scripts/: drop_db.py  init_data.py  run-dev  run-dev.bat  run-tests
tests/: README.md  conftest.py  run_tests.py  test_announcement.py  test_auth.py  test_bookmark.py  test_course_schedule_service.py  test_courses.py  test_courses_service.py  test_enrollment.py  test_enrollment_service.py  test_event.py  test_event_enrollment_service.py  test_image_service.py  test_location_service.py  test_room_service.py  test_user.py  test_utils.py
