[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.1,<0.117.0"
fastapi-cli = ">=0.0.10,<0.0.11"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
sqlmodel = ">=0.0.24,<0.0.25"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
pydantic-settings = ">=2.10.1,<3.0.0"
pyjwt = ">=2.10.1,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-multipart = ">=0.0.20,<0.0.21"
python-jose = ">=3.5.0,<4.0.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.43,<3.0.0"}
bcrypt = "==4.0.1"
gunicorn = "^23.0.0"
aiofiles = "^24.1.0"
pytest-cov = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

